k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ssf-bridge
  labels:
    app.kubernetes.io/name: ssf-apm-bridge
    app.kubernetes.io/part-of: ssf-apm-bridge
